Spring: Claim throughput increase upto 3x